@@ -358,15 +358,13 @@ public class GRAppletMini extends GRApplet implements GalleryRemoteCore, ActionL
 	}
 
 	public void g2Feedback(String method, Object[] params) {
-		//if (gallery.galleryVersion == 2) {
+		if (gallery.galleryVersion == 2) {
 			try {
 				Log.log(Log.LEVEL_TRACE, MODULE, "Invoking Javascript method '" + method + "' with " + params);
 				call.invoke(window, new Object[] {method, params});
-			} catch (IllegalAccessException e) {
-				Log.logException(Log.LEVEL_ERROR, MODULE, e);
-			} catch (InvocationTargetException e) {
+			} catch (Throwable e) {
 				Log.logException(Log.LEVEL_ERROR, MODULE, e);
 			}
-		//}
+		}
 	}
 }
